[package]
name = "classicube-sys"
version = "3.0.0+classicube.1.3.6"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
cstr_core = { optional = true, version = "0.2" }
libc = { optional = true, version = "0.2", default-features = false }
libm = { optional = true, version = "0.2" }
paste = "1"

[build-dependencies]
bindgen = "0.68"
cc = "1"
fs_extra = "1"
regex = "1"

[features]
default = []
no_std = ["cstr_core", "libc", "libm"]
