[package]
name = "classicube-sys"
version = "3.0.4+classicube.1.3.6"

authors = ["SpiralP <spiral.palmer@gmail.com>"]
description = "Rust C bindings for ClassiCube."
documentation = "https://docs.rs/classicube-sys"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SpiralP/rust-classicube-sys"


[dependencies]
cstr_core = { optional = true, version = "0.2" }
libc = { optional = true, version = "0.2", default-features = false }
libm = { optional = true, version = "0.2" }
paste = "1"

[build-dependencies]
bindgen = "0.69"
cc = "1"
fs_extra = "1"
regex = "1"

[features]
default = []
no_std = ["cstr_core", "libc", "libm"]


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
metadata = "required"
