[package]
name = "classicube-sys"
version = "4.1.1+ClassiCube.1.3.7"

authors = ["SpiralP <spiral.palmer@gmail.com>"]
description = "Rust C bindings for ClassiCube."
documentation = "https://docs.rs/classicube-sys"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SpiralP/rust-classicube-sys"


[dependencies]
cstr_core = { optional = true, version = "0.2" }
libc = { optional = true, version = "0.2", default-features = false }
libm = { optional = true, version = "0.2" }
paste = "1"

[build-dependencies]
bindgen = "0.72"
regex = "1"

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = { version = "1" }
fs_extra = { version = "1" }

[features]
default = []
no_std = ["cstr_core", "libc", "libm"]
